[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "timerdo"
authors = [{name = "Caio Mescouto Terra de Souza", email = "caiomescouto@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version", "description"]
dependencies = [
    "sqlalchemy >=2.0.4, <2.1",
    "typer >=0.7.0, <0.8",
    "rich >=13.3, <13.4",
    "pandas >=1.5.3, <1.6",
    "numexpr >=2.8.4, <2.9",
    "bottleneck >=1.3.6, <1.4",
    "pydantic >=1.10.5, <1.11",
]

[project.urls]
Documentation = "https://timerdo.readthedocs.io/en/latest/"
Source = "https://github.com/caiomts/timerdo"

[project.scripts]
timerdo = "timerdo.main:app"

[project.optional-dependencies]
test = [
    "pytest >=7.2.1, <7.3",
    "pytest-cov >=4.0.0, <4.1",
    "Faker >=17.6.0, <17.7", 
    "factory_boy >=3.2.1, <3.3",
]
docs = [
	"mkdocs >=1.4, <1.5",
	"mkdocstrings[python] >=0.20, <0.21",
]

dev = [
	"black >=23.1, <23.2",
	"flake8 >=6.0, <6.1",
	"isort >=5.12, <5.13",
]

[tool.black]
line-length = 79
target-version = ["py311"]
skip-string-normalization = true

[tool.isort]
profile = "black"
