[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "timerdo"
authors = [{name = "Caio Mescouto Terra de Souza", email = "caiomescouto@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version", "description"]
dependencies = [
    "sqlalchemy >=2.0.4, <2.1",
    "typer >=0.7.0, <0.8",
    "rich >=13.3, <13.4",
    "pandas >=1.5.3, <1.6",
    "numexpr >=2.8.4, <2.9",
    "bottleneck >=1.3.6, <1.4",
    "pydantic >=1.10.5, <1.11",
]

[project.urls]
Documentation = "https://github.com/caiomts/timerdo"
Source = "https://github.com/caiomts/timerdo"

[project.scripts]
timerdo = "timerdo.main:app"

[project.optional-dependencies]
test = [
    "pytest >=7.2.1, <7.3",
    "pytest-cov >=4.0.0, <4.1",
    "Faker >=17.6.0, <17.7", 
]

docs = [
	"mkdocs-material >=9.1.3, <9.2",
	"mkdocstrings[python] >=0.20, <0.21",
    "mkdocs-git-revision-date-localized-plugin >=1.2.0, <1.3",
]

dev = [
	"black >=23.1, <23.2",
	"flake8 >=6.0, <6.1",
	"isort >=5.12, <5.13",
    "pydocstyle[toml] >=6.3.0, <6.4",
]

[tool.black]
line-length = 79
target-version = ["py311"]
skip-string-normalization = true

[tool.isort]
profile = "black"

[tool.pydocstyle]
inherit = false
ignore = "D100,D107,D213,D203,D405,D406,D407,D413"
