[metadata]
name = timerdo
version = 0.1.0
author = Caio Mescouto
author_email= caiomescouto@gmail.com
url = https://github.com/caiomts/timerdo
description = A minimalist to-do list with a built-in timer
long_description = file: README.md
keywords = to-do list, timer
license = GNU General Public License v3.0
classifiers =
    License :: OSI Approved :: GNU General Public License v3.0
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
	certifi==2021.10.8
	click==8.0.3
	colorama==0.4.4
	greenlet==1.1.2
	mypy-extensions==0.4.3
	pathspec==0.9.0
	platformdirs==2.4.0
	pydantic==1.8.2
	regex==2021.11.2
	shellingham==1.4.0
	SQLAlchemy==1.4.26
	sqlalchemy2-stubs==0.0.2a19
	sqlmodel==0.0.4
	tomli==1.2.2
	typer==0.4.0
	typing-extensions==3.10.0.2
	setuptools~=58.0.4
	tabulate~=0.8.9
python_requires = >=3.10

[options.entry_points]
console_scripts =
    timerdo = timerdo.main:app

